--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -43,9 +43,18 @@
   flex-direction: row;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1300px){
   .socialCalCellModal{
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 1230px){
+  .disappearLikes{
+    display: none;
+  }
+  .disappearComments{
+    display: none;
   }
 }
 
@@ -491,15 +500,52 @@
 
 
 .socialModalRight .bottomSection{
-  background-color: green;
   position: relative;
   height: 82%;
 }
 
 .socialModalRight .bottomSection .socialLikeCommentSect{
   height: 6%;
-  background-color: blue;
 }
+.socialLikeComment{
+  /* background-color: red; */
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.socialLikeComment .socialLike{
+  /* background-color: blue; */
+  height: 100%;
+  width: 50%;
+  border: 1px solid gainsboro;
+  border-left: none;
+  text-align: center;
+  cursor: pointer;
+}
+.socialLikeComment .socialLike:hover{
+  background-color: gainsboro;
+}
+.socialLikeComment .socialComment{
+  /* background-color: red; */
+  height: 100%;
+  width: 50%;
+  border: 1px solid gainsboro;
+  border-left: none;
+  text-align: center;
+  cursor: pointer;
+}
+.socialLikeComment .socialComment:hover{
+  background-color: gainsboro;
+}
+.textHeightCenter{
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+
+
 
 .socialModalRight .bottomSection .socialCommentListSect{
   height: 59%;
@@ -520,37 +566,6 @@
 
 
 
-.socialLikeComment{
-  /* background-color: red; */
-  display: flex;
-}
-.socialLikeComment .socialLike{
-  /* background-color: blue; */
-  height: 40px;
-  width: 50%;
-  border: 1px solid gainsboro;
-  border-left: none;
-  text-align: center;
-  margin-left: 2px;
-  padding-top: 8px;
-  cursor: pointer;
-}
-.socialLikeComment .socialLike:hover{
-  background-color: gainsboro;
-}
-.socialLikeComment .socialComment{
-  /* background-color: red; */
-  height: 40px;
-  width: 50%;
-  border: 1px solid gainsboro;
-  border-right: none;
-  text-align: center;
-  padding-top: 8px;
-  cursor: pointer;
-}
-.socialLikeComment .socialComment:hover{
-  background-color: gainsboro;
-}
 
 .commentEventHolder{
   /* position: sticky; */
