--- a/frontend/src/containers/CurrUser/EditProfile.css
+++ b/frontend/src/containers/CurrUser/EditProfile.css
@@ -1,9 +1,3 @@
-.uploadBox{
-  /* margin-top: 100px; */
-  text-align: center;
-  width: 300px;
-  height:300px
-}
 
 .profileEditUserName{
   position:absolute;
@@ -35,18 +29,18 @@
   /* background-color: red; */
   font-size: 30px;
   top: 50%;
+
 }
 
+
 .changeProfilePic{
+  position: relative;
   object-fit: cover;
   width: 300px;
   height: 300px;
-  margin-top:60px;
   overflow: none;
   border-radius: 10px;
-  box-shadow:
-
-  0 10px 50px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.08);
   }
 
   .changeAvatar{
@@ -61,9 +55,10 @@
   }
 
 .sideContainer{
-  padding: 20px;
-
-
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  height:100%;
   /* background-color: red; */
 }
 
@@ -76,27 +71,45 @@
   /* transform: translateX(-50%) */
 }
 
-.side1{
-  width: 300px;
-  height: 300px;
-  display: inline-block;
-  float:left;
-  margin-left: 25px;
-  margin-right: 25px;
-  /* background-color: blue; */
+.sideContainer .side1{
+  width:50%;
+  background-color: blue;
+
 }
 
-.side2{
-  display: inline-block;
-  float:right;
-  margin-top: 60px;
-  margin-right: 50px;
+
+.imageMiddle{
+  position: relative;
+  width:50%;
+  background-color: red;
+  left:50%;
+  top:50%;
+  transform: translateX(-50%);
+  transform: translateY(-50%);
+}
+
+
+.uploadBox{
+  position: relative;
+  width: 200px;
+  height:200px;
+  top:50%;
+  left:50%;
+  transform: translateX(-50%);
+  transform: translateY(-50%);
+}
+
+
+.sideContainer .side2{
+  width:50%;
+  background-color: green;
   /* background-color: green; */
 }
 
 
 .uploadBox .plusOutlined{
   /* background-color: red; */
+
   font-size: 30px;
   position: absolute;
   top: 38%;
