--- a/frontend/src/containers/PersonalCalendar/calPopOver.css
+++ b/frontend/src/containers/PersonalCalendar/calPopOver.css
@@ -102,7 +102,12 @@
   height:100%;
 }
 
-
+.centerPopUpName{
+  position: relative;
+  top:50%;
+  transform: translateY(25%);
+  left:10%;
+}
 
 .weekCalPopOverStat{
   display: flex;
