--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -233,6 +233,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  background-color: red;
 }
 
 
@@ -306,7 +307,7 @@
   /* height:800px; */
   /* background-color: #000000cc; */
   overflow: hidden;
-  height: 550px;
+  height: 100%;
   position: relative;
 }
 
