--- a/frontend/src/containers/CurrUser/EditProfile.css
+++ b/frontend/src/containers/CurrUser/EditProfile.css
@@ -36,9 +36,8 @@
 .changeProfilePic{
   position: relative;
   object-fit: cover;
-  width: 300px;
-  height: 300px;
-  overflow: none;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   box-shadow: 0 10px 50px rgba(0, 0, 0, 0.08);
   }
@@ -72,6 +71,7 @@
 }
 
 .sideContainer .side1{
+  position: relative;
   width:50%;
   background-color: blue;
 
@@ -80,27 +80,33 @@
 
 .imageMiddle{
   position: relative;
-  width:50%;
+  width:70%;
+  height: 70%;
   background-color: red;
   left:50%;
-  top:50%;
-  transform: translateX(-50%);
-  transform: translateY(-50%);
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  /* top:50%; */
+  /* transform: translateX(-50%) translateY(-50%); */
 }
 
 
 .uploadBox{
   position: relative;
-  width: 200px;
-  height:200px;
-  top:50%;
+  width: 40%;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  border: 10px solid blue;
+  /* top:50%;
   left:50%;
-  transform: translateX(-50%);
-  transform: translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+   */
 }
 
 
 .sideContainer .side2{
+  position: relative;
   width:50%;
   background-color: green;
   /* background-color: green; */
