--- a/frontend/src/containers/CurrUser/EditProfile.css
+++ b/frontend/src/containers/CurrUser/EditProfile.css
@@ -36,10 +36,12 @@
 .changeProfilePic{
   position: relative;
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 250px;
+  height: 250px;
+  overflow: none;
   border-radius: 10px;
   box-shadow: 0 10px 50px rgba(0, 0, 0, 0.08);
+
   }
 
   .changeAvatar{
@@ -71,44 +73,43 @@
 }
 
 .sideContainer .side1{
-  position: relative;
   width:50%;
-  background-color: blue;
+  /* background-color: blue; */
 
 }
 
+.fitUploadAvatar{
+  position: relative;
+  width:50%;
+  left:50%;
+  top:50%;
+  transform: translateX(-50%) translateY(-50%);
+  font-size: 80px;
+}
 
 .imageMiddle{
   position: relative;
-  width:70%;
-  height: 70%;
-  background-color: red;
+  width:50%;
+  /* background-color: red; */
   left:50%;
-  top: 50%;
+  top:50%;
   transform: translateX(-50%) translateY(-50%);
-  /* top:50%; */
-  /* transform: translateX(-50%) translateY(-50%); */
 }
 
 
 .uploadBox{
   position: relative;
-  width: 40%;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  border: 10px solid blue;
-  /* top:50%;
+  width: 200px;
+  height:200px;
+  top:50%;
   left:50%;
   transform: translateX(-50%) translateY(-50%);
-   */
 }
 
 
 .sideContainer .side2{
-  position: relative;
   width:50%;
-  background-color: green;
+  /* background-color: green; */
   /* background-color: green; */
 }
 
