--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -303,14 +303,6 @@
   flex-direction: column;
 }
 
-.picturesRoll{
-  /* height:800px; */
-  /* background-color: #000000cc; */
-  overflow: hidden;
-  height: 95vh;
-  position: relative;
-}
-
 
 .picturesRoll .threeDot{
   position: absolute;
@@ -318,7 +310,19 @@
   z-index: 100;
   color:white;
 }
-.picturesRoll .socialImages{
+
+
+.picturesRoll{
+  /* height:800px; */
+  /* background-color: #000000cc; */
+  overflow: hidden;
+  width: 100%;
+  height: 95vh;
+  position: relative;
+}
+
+
+.picturesRoll img{
   position: relative;
   height: 100%;
   width: 100%;
@@ -365,7 +369,7 @@
   display: flex;
   overflow: auto;
   flex-direction: column;
-  height: 95%;
+  height: 90%;
 }
 
 
@@ -547,7 +551,7 @@
 
 .socialModalRight .postBottomSection{
   position: relative;
-  height: 5%;
+  height: 10%;
 }
 
 .socialModalRight .topSection .socialLikeCommentSect{
