--- a/frontend/src/components/SideMenu/badge.css
+++ b/frontend/src/components/SideMenu/badge.css
@@ -16,9 +16,9 @@
 }
 
 .notificationInside{
-  left:20%;
   position: relative;
-  transform: translateX(50%);
+  transform: translateX(50%)  translateY(-50%);
+  left:15%;
   bottom:25%;
   font-weight: 600;
 }
