--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -303,14 +303,12 @@
   flex-direction: column;
 }
 
-.picturesRoll{
-  /* height:800px; */
-  /* background-color: #000000cc; */
-  overflow: hidden;
-  height: 95vh;
-  position: relative;
-}
 
+.testSingle{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 
 .picturesRoll .threeDot{
   position: absolute;
@@ -318,6 +316,39 @@
   z-index: 100;
   color:white;
 }
+
+.singlePic{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+.picturesRoll{
+  /* height:800px; */
+  /* background-color: #000000cc; */
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+  height: 95%;
+}
+
+.innerPic{
+  width: 100%;
+  position: relative;
+  height: 100%;
+}
+
+
+.picturesRoll img{
+  object-fit: cover;
+  width:100%;
+  height:100%;
+}
+
+
 .picturesRoll .socialImages{
   position: relative;
   height: 100%;
