--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -305,10 +305,10 @@
 }
 
 
-.testSingle{
+.testSingle img{
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 95vh;
 }
 
 .picturesRoll .threeDot{
