--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -237,6 +237,11 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
   height:90vh;
 
 }
+.testMiddle{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
 .imageContainer img {
     object-fit: cover;
     width: 100%;
