--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -234,19 +234,20 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
 .imageContainer{
   width:45vw;
-  height:90vh;
+  height:100%;
 
 }
 .testMiddle{
   position: relative;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
-.imageContainer img {
+/* .imageContainer img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-}
+} */
 
 /* This is for the carousel in the postnewsfeed*/
 .postPicCarouselNews{
