--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -496,11 +496,14 @@
   cursor: pointer;
   color: white;
   font-size: 15px;
-  width: 60px;
-  height: 30px;
-  position: absolute;
-  left: 150px;
-  top: 30%;
+  width: 80%;
+  height: 40%;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  position: relative;
+  text-align: center;
+
 }
 .alreadyViewButtonCoverPass:hover{
   filter: brightness(90%);
@@ -508,9 +511,8 @@
 
 .alreadyViewButtonCoverPass .viewText{
   position: relative;
-  left: 20%;
-  top: 2px;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 
