--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -318,10 +318,17 @@
 }
 
 .singlePic{
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   height: 100%;
 }
+
+.singlePic{
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
 
 
 
