--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -280,7 +280,7 @@
 .coverCellBox{
   position: relative;
   width: 100%;
-  height: 82%;
+  height:762%;
   overflow: auto;
 }
 
@@ -290,14 +290,17 @@
   width: 100%;
 }
 .coverCellBoxList .coverCellBoxItem {
-  background-color: red;
   margin: 2px;
   width: 99%;
+  height: 70px;
   padding-left: 3px;
   border-radius: 5px;
   border: 1px solid gainsboro;
   box-shadow: 0 0px 0px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-
+  transition: 0.2s;
+}
+.coverCellBoxList .coverCellBoxItem:hover {
+  transform: scale(1.02);
 }
 
 .eventBoxBox{
@@ -310,7 +313,7 @@
 
 .eventBoxListHeader {
   position: relative;
-  height: 18%;
+  height: 24%;
   width: 100%;
   /* align-items: center;
   text-align: center; */
@@ -328,6 +331,7 @@
   transform: translateX(-50%);
   z-index: 3;
   text-align: center;
+
 }
 
 .eventBoxListHeader .buttonHolderHolder{
@@ -341,7 +345,6 @@
   width: 50%;
   height: 50%;
   left: 50%;
-
   transform: translateX(-50%);
   display: flex;
   flex-direction: row;
@@ -354,6 +357,18 @@
   z-index: 1;
   width: calc(100%/3);
   display: flex;
+}
+
+.iconIcon{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 18px;
+  color: gray;
+}
+.iconIcon:hover{
+  /* transform: scale(1.2) */
+
 }
 
 .eventBoxListHeader .buttonHolderHolder .buttonHolder .plusButton:hover{
@@ -386,7 +401,10 @@
   position: relative;
   width: calc(100%/2);
   display: flex;
+}
 
+.eventBoxListHeader .buttonHolderHolder .buttonHolder .eventButtonAfter:hover {
+  transform: scale(1.2);
 
 }
 .eventBoxListHeader .buttonHolderHolder .buttonHolder .eyeButtonAfter {
@@ -394,18 +412,27 @@
   position: relative;
   width: calc(100%/2);
   display: flex;
+}
+.eventBoxListHeader .buttonHolderHolder .buttonHolder .eyeButtonAfter:hover {
+  transform: scale(1.2);
 
 }
+
 .eventBoxListHeader .buttonHolderHolder .eyeButtonPass {
   /* color: red; */
   position: relative;
   height: 100%;
-  width: 10%;
+  width: 50%;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   flex-direction: row;
-  font-size: 24px;
+  font-size: 14px;
+  color: gray;
+
+}
+
+.eventBoxListHeader .buttonHolderHolder .eyeButtonPass:hover {
 
 }
 
@@ -415,7 +442,7 @@
   background-color: limegreen;
   cursor: pointer;
   color: white;
-  font-size: 15px;
+  font-size: 12px;
   border: 1px solid gainsboro;
   border-radius: 5px;
   width: 80%;
@@ -443,7 +470,7 @@
   border-radius: 5px;
   cursor: pointer;
   color: white;
-  font-size: 15px;
+  font-size: 12px;
   width: 80%;
   height: 60%;
   position: relative;
@@ -463,7 +490,7 @@
   border: 1px solid gainsboro;
   border-radius: 5px;
   color: white;
-  font-size: 15px;
+  font-size: 12px;
   width: 80%;
   height: 60%;
   position: relative;
@@ -495,7 +522,7 @@
   border-radius: 5px;
   cursor: pointer;
   color: white;
-  font-size: 15px;
+  font-size: 12px;
   width: 80%;
   height: 40%;
   left: 50%;
@@ -527,7 +554,7 @@
   border-radius: 5px;
   cursor: pointer;
   color: white;
-  font-size: 15px;
+  font-size: 12px;
   width: 80%;
   height: 60%;
   position: relative;
