--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -285,3 +285,21 @@ box-shadow: 0px 3px 9px rgba(0,0,0,.5);
   position: 'relative';
   right:'100px';
 }
+
+
+.newsFeedModalEventCardWrite{
+  position: relative;
+  overflow: hidden;
+
+  background: white;
+  line-height: 150%;
+  border-radius: 15px;
+  padding:40px;
+  box-shadow:  0 10px 50px rgba(0, 0, 0, 0.08);
+  font-family: 'Segoe UI Regular';
+  width:50%;
+
+  left:50%;
+  top:50%;
+  transform: translateX(-50%) translateY(-50%);
+}
