--- a/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
@@ -54,14 +54,15 @@
   position: relative;
   left: 50%;
   transform: translateX(-50%) ;
+
   width:100%;
-  height: 90vh;
+  max-height: 90vh;
   overflow: hidden;
   background-color: red;
 }
 .testMiddle{
   position: relative;
-  height: 90vh;
+  height: 100%;
   width: 100%;
   object-fit: cover;
 }
