--- a/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
@@ -59,16 +59,26 @@
   /* max-height: 90vh; */
   height: 90vh;
   overflow: hidden;
-  /* background-color: red; */
+  background-size: cover;
+  font-size: 30px;
+
 
 }
-.testMiddle{
+.backgroundImageNews{
   position: relative;
+
   width: 100%;
   height: 90vh;
+  background-size: cover;
+  background-position: center;
+}
+
+.testMiddle{
+  position: absolute;
+  width: 100%;
+  height:90vh;
   left: 50%;
   transform:translateX(-50%);
-  /* background-size:cover; */
   object-fit: cover;
 
 }
