--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -303,3 +303,13 @@ box-shadow: 0px 3px 9px rgba(0,0,0,.5);
   top:50%;
   transform: translateX(-50%) translateY(-50%);
 }
+
+
+/* Write a post modal start */
+.WritePostNameContainer{
+  position: absolute;
+  width:25%;
+  height: 75px;
+  /* background-color: red; */
+  top:30%;
+}
