--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -583,7 +583,7 @@
   font-size: 15px;
 }
 
-.messageList .eventMessageItemNotUser{
+.eventMessageItemNotUser{
   /* background-color: red; */
   clear:both;
   /* display: inline-block; */
@@ -596,19 +596,21 @@
   background: #f5f5f5;
   float: left;
   font-size: 15px;
+  font-family: "Segoe UI Regular";
 
 }
 
 .messageList  .eventMessageItemUser .eventMessageAvatar{
   position: relative;
   float:right;
+
 }
 
-.messageList .eventMessageItemNotUser .eventMessageAvatar{
+.eventMessageItemNotUser .eventMessageAvatar{
   /* margin-left: 5px; */
 }
 
-.messageList .eventMessageItemNotUser .messageP{
+.eventMessageItemNotUser .messageP{
   /* background-color: red; */
   margin-left: 10px;
   /* padding-top: -5px; */
