--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -33,7 +33,7 @@
 
 
 .chatContainer .chatLeftSide{
-  /* background-color: red; */
+  background-color: white;
   padding:10px;
   width: 23%;
   height: 100%;
@@ -219,7 +219,7 @@
 
 /* This is for the CurChatManager */
 .chatContainer .chatFarRightSide{
-    /* background-color: blue; */
+    background-color: white;
     position: relative;
     width: 27%;
 }
