--- a/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
@@ -61,10 +61,32 @@
   overflow: hidden;
   background-size: cover;
   font-size: 30px;
-  background-position: center;
-
 
 }
+
+.imageContainerSingle{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%) ;
+
+  width:100%;
+  /* max-height: 90vh; */
+  height: 90vh;
+  overflow: hidden;
+  /* background-size: cover; */
+  font-size: 30px;
+
+}
+
+.backgroundImageNewsSingle{
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  background-size: cover;
+}
+
+
+
 .backgroundImageNews{
   position: relative;
 
