--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -54,12 +54,13 @@
   /* background-color: red; */
   /* width: 50%; */
   height: 100%;
+  border-left: 1px solid lightgray;
+  border-right: 1px solid lightgray;
 }
 
 
 /* This is for the add chats feature */
 .chatContainer .chatRightSide .addNewChatContainer{
-  background-color: red;
   position:relative;
   width: 100%;
   height: 100%;
@@ -67,7 +68,6 @@
 .chatContainer .chatRightSide .addNewChatContainer .searchFormBox{
   /* background-color: red; */
   position: relative;
-  border: 1px solid gray;
   height: 8%;
   width: 100%;
 }
@@ -96,7 +96,6 @@
 
 .chatContainer .chatRightSide .addNewChatContainer .searchChatContent{
   /* background-color: blue; */
-  border: 1px solid gray;
   height: 85%;
 }
 
@@ -135,7 +134,6 @@
   bottom: 0px;
   height: 7%;
   width: 100%;
-  border: 1px solid grey;
 }
 
 .chatContainer .chatRightSide .addNewChatContainer .searchChatInput .searchChatInputBox{
