--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -642,7 +642,7 @@
 /* STUFF DOWN HERE MAY OR MAY NOT BE USED, MOSTLY NOT USED */
 
 .outerContainerPeople{
-
+  font-weight: 400;
   /* margin-bottom: 15px; */
   /* background-color: red; */
 }
