finished up the main search feature in chats

--- a/frontend/src/containers/NewChatFolder/ChatManagerFolder/ChatManager.css
+++ b/frontend/src/containers/NewChatFolder/ChatManagerFolder/ChatManager.css
@@ -30,8 +30,8 @@
 .chatEventShare .chatEventShareLeft .eventListContainer {
   /* background-color: red; */
   margin-top: 15px;
-  overflow: hidden;
-  height: 465px;
+  overflow: auto;
+  height: 430px;
   width:300px;
 }
 
