--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -9,7 +9,7 @@
   font-size: 13px;
   font-weight: normal;
   height: auto;
-  line-height: 22.0799999237061px;
+  line-height: 20px;
   text-align: left;
   width: auto;
 }
@@ -21,21 +21,50 @@
 
 .headerContainer{
   display: flex;
-
-  padding-top: 20px;
+  padding-top: 10px;
   padding-left: 20px;
-  padding-right:30px;
-  padding-bottom: 15px;
-  /* background: red; */
-  width:95%;
+  padding-bottom: 10px;
+  /* background: yellow; */
+  width:100%;
   float:left;
 }
+
+.topRightNewsFeedPost{
+  width: 95%;
+  /* background: red; */
+}
+.topleftNewsFeedPost {
+  width: 10%;
+  /* background: blue; */
+}
+
+
 .optionPostHeader{
   float: right;
   /* background-color:blue; */
-  width:5%;
-  margin-top: 25px;
+  width:10%;
+  height: 100%;
+  position: relative;
   display:inline;
+
+}
+
+.optionNoPostHeader{
+  float: right;
+  /* background-color:blue; */
+  width:3.5%;
+  height: 100%;
+  position: relative;
+  display:inline;
+
+}
+
+
+.threeDotPost{
+  position: absolute;
+  left:50%;
+  top:50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .optionHover:hover
@@ -54,12 +83,6 @@
   cursor: pointer;
 }
 
-.grid-33 {
-  width: calc(89.3333% - 5px);
-}
-.grid-13 {
-  width: calc(13.3333% - 15px);
-}
 
 .dividerTest{
   border-top: 3px solid #bbb;
@@ -80,19 +103,43 @@
   width:100%;
   margin-bottom: -15px;
 }
-
-.innerContainerLike{
+.postLikeContainer{
+  display: flex;
+  flex-direction: row;
   position: relative;
+  /* background: red; */
+  width:100%;
+
+}
+.LeftinnerContainerLike{
+  padding-left: 15px;
+  position: relative;
+  width:50%;
   vertical-align: middle;
-  top: 50%;
-  -webkit-transform: translateY(-0%);
-  -ms-transform: translateY(-25%);
-  transform: translateY(-25%);
+  font-weight: 400;
+  font-family: "Segoe UI Regular";
+  /* background: green; */
   /* background: red; */
 }
 
+.RightinnerContainerLike{
+  position: relative;
+  width:50%;
+  /* background: blue; */
+  top:50%;
+
+  /* background: red; */
+}
+
+.likingPostAvatarGroup{
+  position: absolute;
+  left:60%;
+  top:75%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
 .halfUpLikePost{
-  background-color: green;
+  /* background-color: green; */
   height:50px;
 }
 
