--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -119,6 +119,8 @@
   position: relative;
   width: 100%;
   height: auto;
+  font-family: 'Segoe UI Regular';
+
 }
 
 .newChatTextContainer .chatListItemR{
@@ -126,6 +128,8 @@
   width: 100%;
   height: auto;
   text-align: right;
+  font-family: 'Segoe UI Regular';
+
 }
 
 .chatListItemL .textMessageLeft{
@@ -137,7 +141,7 @@
   padding: 10px 15px;
   margin: 2px 15px 5px 10px;
   border-radius: 20px;
-  max-width: 40%;
+  max-width: 45%;
   /* line-height: 130%; */
   background:#E8E8E8;
   font-size: 15px;
@@ -151,7 +155,7 @@
   padding: 10px 15px;
   margin: 2px 15px 5px 15px;
   border-radius: 20px;
-  max-width: 40%;
+  max-width: 45%;
   /* line-height: 130%; */
   background: #00BFFF;
   color: #f5f5f5;
@@ -195,6 +199,55 @@
   font-size: 9px;
 }
 
+.messageEventContainerR{
+  position: relative;
+  width: 45%;
+  display: inline-block;
+  /* font-size: 16px; */
+  text-align: left;
+  margin: 2px 15px 5px 15px;
+}
+
+.messageEventContainerL{
+  position: relative;
+  width: 45%;
+  display: inline-block;
+  /* font-size: 16px; */
+  text-align: left;
+  margin: 2px 15px 5px 15px;
+  padding:10px;
+  overflow: hidden;
+
+  background: white;
+  line-height: 150%;
+  border-radius: 15px;
+  padding:10px;
+  box-shadow:  0 10px 50px rgba(0, 0, 0, 0.08);
+  font-family: 'Segoe UI Regular';
+  background:#E8E8E8;
+
+}
+
+.messageEventAvatarHolder{
+  position: relative;
+  width: 30px;
+  padding-top: 10px;
+}
+
+.messageEventTextHolder{
+  position: relative;
+  width: 90%;
+  margin-left: 5px;
+  padding: 10px;
+}
+
+
+.messageEventTitleText{
+  font-size: 14px;
+}
+
+
+
 
 
 .chatTextBoxRight{
@@ -225,14 +278,14 @@
 
 
 
-.chatContainer .chatRightSide .addNewChatContainer .searchChatInput{
+.searchChatInput{
   position: absolute;
   bottom: 0px;
   height: 7%;
   width: 100%;
 }
 
-.chatContainer .chatRightSide .addNewChatContainer .searchChatInput .searchChatInputBox{
+.searchChatInput .searchChatInputBox{
   position: relative;
   left: 25%;
   /* background-color: red; */
