--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
@@ -2,6 +2,13 @@
   /* background-color: red; */
 }
 
+
+.leftESync{
+  width:100%;
+  height: 100%;
+  background: red;
+}
+
 .eventSyncForm .radioCon{
   /* background-color: red; */
   position: relative;
@@ -59,8 +66,7 @@
 
 .eventSyncCalendarContainer {
   position: relative;
-  left: 15px;
-  width: 1285px;
+  width: 100%;
   bottom: 0px;
   display: flex;
   /* background-color: blue; */
@@ -100,7 +106,7 @@
 .eventSyncCalendarContainer .syncCalendar {
   display: block;
   position: relative;
-  width: 90%;
+  width: 65%;
   /* background: var(--neutral-color); */
   /* background-color: blue; */
   /* border: 1px solid var(--border-color); */
@@ -158,6 +164,8 @@
   max-width: 100%;
 }
 
+
+/* adjust calendar height and width */
 .eventSyncCalendarContainer .syncCalendar .syncBody {
   /* background-color: red; */
   display: flex;
@@ -165,12 +173,14 @@
   height: 780px;
   border-top: 2px solid;
   border-color: darkgrey;
-  width: 1060px;
+  width: 900px;
 }
 
 .eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body{
   /* background-color: red; */
-  width: 1000px;
+  position: relative;
+
+  width: 800px;
 }
 
 
